# pi_lab

./: .gitignore  Makefile  README.md  config.ini  pi_lab
.github/workflows/: build.yml
include/: alert.h  config.h  http_api.h  logger.h  sel.h  sensor.h  sensor_pico.h  sensor_sht35.h  st7735.h
pico2/: CMakeLists.txt  bmc_sim.c  wifi_config.h.example
scripts/: sync_mac.sh  sync_pi.sh
src/: alert.c  config.c  http_api.c  logger.c  main.c  sel.c  sensor_pico.c  sensor_sht35.c  st7735.c
test/: test_pico2.c  test_sht35  test_sht35.c  test_st7735  test_st7735.c
